<resources>
    <string name="app_name">Guess the Flag</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="flag_image">Flag</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="game_over">GAME OVER</string>
    <string name="your_score">Your score: ?</string>
    <string name="new_game">New game</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="high_score">High score = ?</string>
    <string name="leaderboard">Leaderboard 👑</string>
</resources>